--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav a:hover {
 .landing-page {
   position: relative;
   min-height: 100vh;
-  background: url('Website gema.png') no-repeat center center;
+  background: url('Website-gema.png') no-repeat center center;
   background-size: cover;
 }
 
